--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,13 @@
 FROM python:3.11-slim
 
-WORKDIR /app
+WORKDIR /src
 
-# Install system dependencies
+# Install system dependencies and development tools
 RUN apt-get update && apt-get install -y \
     postgresql-client \
     curl \
+    git \
+    vim \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies for development
@@ -25,13 +27,13 @@ RUN pip install --no-cache-dir \
     isort
 
 # Copy application code
-COPY app/ /app/app/
-COPY config/ /app/config/
+COPY app/ /src/app/
+COPY config/ /src/config/
 
 # Set environment variables
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/src
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
 # Enable hot reload
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--reload-dir", "/app/app"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--reload-dir", "/src/app"]
