--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ uvicorn==0.27.0
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 pydantic==2.5.3
+aiohttp==3.9.1
 python-multipart==0.0.6
 email-validator==2.1.0.post1
 
