--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ pydantic==2.5.3
 aiohttp==3.9.1
 python-multipart==0.0.6
 email-validator==2.1.0.post1
+python-dotenv==1.0.0
+aiofiles==23.2.1
+PyJWT==2.8.0
 
 # Monitoring and system utilities
 psutil==5.9.8
