--- a/env.example
+++ b/env.example
@@ -10,7 +10,7 @@ LOG_LEVEL=INFO
 # API Settings
 API_TITLE="ThingData Server"
 API_DESCRIPTION="ThingData Protocol v1.0 Implementation"
-API_VERSION="0.1.2"
+API_VERSION=0.1.2
 API_HOST=0.0.0.0
 API_PORT=8000
 
