--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ python-dateutil==2.8.2
 # Persistent storage
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
+
+# Tests
+pytest==7.4.3
+pytest-cov==4.1.0  # For coverage reporting
